[B]Version 0.1.4[/B]
- Fixed Thiruttuvcd Hindi Next Page link
- Thiruttumasala was enabled by default. Changed default to disabled in Addon-Settings

[B]Version 0.1.3[/B]
- common.Cache enabled. Url's are parsed and results are cached now. So next time you open the same link, items are fetched from the cache instead of the real web url. This gives significant speed improvement. You can change cache expiry time via addon settings.
- Enabled Addon settings
- Enable\Disable Adult content from addon settings (Disabled by default)

[B]Version 0.1.2[/B]
- Added new source for movies,shortfilms,comedy clips : abcmalayalam.com
- bug fixes
- Coming soon, common.cache and Downloads (for ppl with no patience to stand buffering :) )

[B]Version 0.1.1[/B]
- Fixed issue when browsing to next page

[B]Version 0.1.0[/B]
- Wrote custom resolver for Youku, Lobovideo (you will see slight delay while playing from these sources)
- Supports vidto , nowvideo, putlocker , youtube, veoh
- Added search