@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.malabartalkies" name="MalabarTalkies" version="0.1.4" provider-name="gbzygil">
+<addon id="plugin.video.malabartalkies" name="MalabarTalkies" version="0.1.5" provider-name="gbzygil">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
         <import addon="script.module.urlresolver" version="1.0.0"/>
