@@ -2,4 +2,5 @@
 <settings>
     <setting label="EnableAdult" type="bool" id="EnableAdult" default="false"/>
     <setting label="Cache-Timeout" type="number" id="Cache-Timeout" default="24 "/>
+    <setting label="Allow Hit Counter" type="bool" id="AllowHitCtr" default="true"/>    
 </settings>
